Added gateway api for core-booking
